<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startEditText"
        android:hint="@string/start_loc_hint"
        android:enabled="true"
        android:textIsSelectable="false"
        android:focusable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:text="Houston" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toTextView"
        android:hint="@string/to_string"
        android:layout_gravity="center_horizontal"
        android:textSize="19sp"
        android:layout_alignBottom="@+id/startEditText"
        android:layout_toEndOf="@+id/startEditText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destinationEditText"
        android:hint="@string/end_loc_hint"
        android:textIsSelectable="false"
        android:enabled="true"
        android:clickable="false"
        android:focusable="true"
        android:layout_above="@+id/submitButton"
        android:layout_toEndOf="@+id/toTextView"
        android:text="Chicago" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_directions_button"
        android:id="@+id/submitButton"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/startEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/download_string"
        android:id="@+id/downloadingTextView"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/submitButton"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/directionsScrollView"
        android:layout_gravity="center_horizontal"
        style="@android:style/Theme.Material"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/downloadingTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/directionsTextView"
            android:layout_gravity="center_horizontal" />
    </ScrollView>

</RelativeLayout>
